# frequency-beliefs

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml  skills-lock.json
.claude/agents/: code-reviewer.md  literature-reviewer.md  paper-editor.md  research-strategist.md  simulation-methodologist.md  theorem-developer.md  theory-auditor.md
.claude/commands/: citation-pass.md  code-verification.md  derive-rule-results.md  direction-audit.md  direction-search.md  four-rule-refactor.md  literature-scan.md  paper-revision.md  project-status.md  proof-audit.md  simulation-plan.md
.claude/skills/: pre-submission-report
_context/: current_issues.md  current_status.md  library.bib  misreporting_robustness_plan.md  next_steps.md  revision_plan.md  simulation_results_summary.md
_context/exploration/: bounds_search_manhattan_hamming.md  direction_memos.md  feasibility_frontier.md  literature_scan_log.md  master_threshold_theorem.md  rejected_directions.md  rule_candidate_screen.md
_context/related_literature/: README.md
docs/adr/: 0001-four-headline-rules-analytical-and-computational.md  0002-risk-neutrality-in-body-binary-lottery-extension-in-discussion.md
notebooks/: reproduce_analysis.ipynb
outputs/: README.md
paper/: main.tex  references.bib
scripts/: candidate_rule_checks.py  config.py  consistency_check.py  design_efficiency.py  explore_master_threshold.py  hamming_interior_search.py  hamming_spike.py  make_figures.py  misreporting_robustness.py  utils.py  verify_regions.py
tests/: conftest.py  test_consistency.py  test_math_core.py
(+55 files in other folders)
